@@ -1,36 +1,24 @@
 package com.urise.webapp;
 
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
-import java.util.concurrent.atomic.AtomicReference;
-import java.util.stream.Collectors;
 
 public class MainStream {
     public static int minValue(int... values) {
-        AtomicReference<Double> count = new AtomicReference<>((double) 0);
-        Double sum = Arrays.stream(values)
+        return Arrays.stream(values)
                 .distinct()
-                .boxed()
-                .sorted(Collections.reverseOrder())
-                .map((x) -> x * Math.pow(10, count.getAndSet(count.get() + 1)))
-                .reduce(0.0, Double::sum);
-        return sum.intValue();
+                .sorted()
+                .reduce(0, (a, b) -> (a*10 + b));
     }
 
     public static List<Integer> oddOrEven(List<Integer> integers) {
         int sum = integers.stream()
                 .mapToInt(x -> x)
                 .sum();
+        boolean isHonest = sum % 2 == 0;
         return integers.stream()
-                .filter(x -> {
-                    if (sum % 2 == 0) {
-                        return x % 2 != 0;
-                    } else {
-                        return x % 2 == 0;
-                    }
-                })
-                .collect(Collectors.toList());
+                .filter(x -> isHonest == (x % 2 != 0))
+                .toList();
     }
 
     public static void main(String[] args) {
